# xyz2mol_tm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ML/: LGBMRegressor_hyperopt.py  README.md  encode_graph.py  gcnn_tmc.py  load_smiles_data.py  ml_environment.yml  ml_fingerprints.py  ml_nbo.py  ml_smiles_graph.py  nets.py  plot.py  tmQMg.py  tools.py  trainer.py  util.py
ML/lgbm_hyperparameters/: lgbm_best_params_polarisability.txt  lgbm_best_params_tzvp_dipole_moment.txt  lgbm_best_params_tzvp_homo_lumo_gap.txt
ML/test_set_ids/: huckel_test_set.txt  test_set_kneiding.txt
SMILES_csvs/: README.md
comparing_smiles/: compare_smiles_code.py  comparing_smiles.ipynb  highlight_smiles_problems.ipynb  hydrogen_parser.py  visualize.py
xyz2mol_tm/: __init__.py  xyz2mol_tmc.yml
xyz2mol_tm/CSD_to_valid_smiles/: README.md  csd_fix_smiles.ipynb  csd_fix_smiles.py
xyz2mol_tm/NBO_to_smiles/: README.md  data_handler.py  get_ligand_smiles.py  get_tmc_smiles.py  mol_utils.py  query_csd.py
xyz2mol_tm/huckel_to_smiles/: README.md  xyz2mol_local.py  xyz2mol_tmc.py
